2009-08-21	Roxana Leontie <roxana.leontie@gmail.com>

	* pc386/console/fb_vga.c: added read/write functionality; added thread
	safety to prevent multiple open() operations of the frame buffer device.

2009-08-21	Joel Sherrill <joel.sherrill@OARcorp.com>

	* include/bsp.h: Eliminate BSPs defining NUMBER_OF_TERMIOS_PORTS.
	Should be automatically handled by confdefs.h or the application.

2009-08-06	Joel Sherrill <joel.sherrill@oarcorp.com>

	* include/tm27.h: Remove references to rtems_interrupt_catch since this
	archiecture does not use Simple Vectored Interrupt model.

2009-08-03	Roxana Leontie <roxana.leontie@gmail.com>

	* console/fb_vga.c: changed the reference to mw_fb.h into fb.h

2009-07-29	Roxana Leontie <roxana.leontie@gmail.com>

	* Makefile.am, preinstall.am, console/fb_vga.c: Switch to using
	frame_buffer_ naming. Joel cleaned up formatting and removed tabs
	that were there long before Roxana touched this file.
	* console/fb_vga.h: Removed.

2009-07-24	Roxana Leontie <roxana.leontie@gmail.com>

	* console/fb_vga.c: divided fb_screeninfo structure into
	fb_var_screeninfo and fb_fix_screeninfo; same with get_screen_info

2009-07-21	Roxana Leontie <roxana.leontie@gmail.com>

	* console/fb_vga.c: replaced the ioctl structures with linux
	framebuffer equivalents

2009-07-16	Joel Sherrill <joel.sherrill@oarcorp.com>

	* configure.ac: Rename BSP_BOOTCARD_OPTIONS to
	RTEMS_BSP_BOOTCARD_OPTIONS. Add RTEMS_BSP_CLEANUP_OPTIONS so all BSPs
	have the same options.

2009-07-01	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* Makefile.am, preinstall.am: Update for generic interrupt support.

2009-06-17	Joel Sherrill <joel.sherrill@oarcorp.com>

	* console/ps2_mouse.c: Fix inconsistent spacing.

2009-06-12	Chris Johns <chrisj@rtems.org>	

	* ide/ide.c: Format the data output in DEBUG mode.

2009-05-30	Chris Johns <chrisj@rtems.org>

	* ide/ide.c: Add initialisation code to reset the IDE devices and